Implemented a basic ShaderProgram (needs improvement) and started implementation of the FontRenderer, GLFW_EngineCore - Removed the LoadShaders function and relevant variables

--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
@@ -34,12 +34,15 @@
     <Filter Include="Source Files\GameObjects">
       <UniqueIdentifier>{96c2ade4-1b28-4fe3-9ed4-5368c9827204}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Graphic Engine">
+      <UniqueIdentifier>{6473456e-4dfd-457d-a2fa-2006bdfcb0ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Graphic Engine">
+      <UniqueIdentifier>{1c96ef3d-cd24-4059-a0d6-a195fb11390f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="include\GLFW_EngineCore.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\IEngineCore.h">
@@ -120,11 +123,17 @@
     <ClInclude Include="include\Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\ShaderProgram.h">
+      <Filter>Header Files\Graphic Engine</Filter>
+    </ClInclude>
+    <ClInclude Include="include\GLFW_EngineCore.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\FontRenderer.h">
+      <Filter>Header Files\Graphic Engine</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\GLFW_EngineCore.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -166,6 +175,15 @@
     </ClCompile>
     <ClCompile Include="source\StaticEnvironmentObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="source\GLFW_EngineCore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="source\ShaderProgram.cpp">
+      <Filter>Source Files\Graphic Engine</Filter>
+    </ClCompile>
+    <ClCompile Include="source\FontRenderer.cpp">
+      <Filter>Source Files\Graphic Engine</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
