--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="include\FileSystemHelper.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\CommandArgumentTypes.h" />
+    <ClInclude Include="include\FontRenderer.h" />
     <ClInclude Include="include\HealthComponent.h" />
     <ClInclude Include="include\InputCommands.h" />
     <ClInclude Include="include\GameObject.h" />
@@ -45,6 +46,7 @@
     <ClInclude Include="include\MovementComponent.h" />
     <ClInclude Include="include\PlayerCharacter.h" />
     <ClInclude Include="include\Scene.h" />
+    <ClInclude Include="include\ShaderProgram.h" />
     <ClInclude Include="include\StaticEnvironmentObject.h" />
     <ClInclude Include="include\TransformComponent.h" />
   </ItemGroup>
@@ -53,6 +55,7 @@
     <ClCompile Include="source\DynamicEnvironmentObject.cpp" />
     <ClCompile Include="source\EndLevelCollectable.cpp" />
     <ClCompile Include="source\EnemyTower.cpp" />
+    <ClCompile Include="source\FontRenderer.cpp" />
     <ClCompile Include="source\GLAD\glad.c" />
     <ClCompile Include="source\GLFW_EngineCore.cpp" />
     <ClCompile Include="source\InputHandler.cpp" />
@@ -62,6 +65,7 @@
     <ClCompile Include="source\Model.cpp" />
     <ClCompile Include="source\PlayerCharacter.cpp" />
     <ClCompile Include="source\Scene.cpp" />
+    <ClCompile Include="source\ShaderProgram.cpp" />
     <ClCompile Include="source\StaticEnvironmentObject.cpp" />
     <ClCompile Include="source\STB_IMAGE\stb_image.c" />
   </ItemGroup>
