--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
@@ -34,6 +34,12 @@
     <Filter Include="Source Files\GameObjects">
       <UniqueIdentifier>{96c2ade4-1b28-4fe3-9ed4-5368c9827204}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Engines">
+      <UniqueIdentifier>{feeb7c1f-a4d3-4366-9ceb-2f6505475922}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Engines">
+      <UniqueIdentifier>{9af3b43b-aff8-4eff-9e7c-da1c85c692c3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Game.h">
@@ -120,6 +126,9 @@
     <ClInclude Include="include\Collision.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\PhysicsEngine.h">
+      <Filter>Header Files\Engines</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\GLFW_EngineCore.cpp">
@@ -166,6 +175,9 @@
     </ClCompile>
     <ClCompile Include="source\StaticEnvironmentObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="source\PhysicsEngine.cpp">
+      <Filter>Source Files\Engines</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
