--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj.filters
@@ -129,6 +129,9 @@
     <ClInclude Include="include\PhysicsEngine.h">
       <Filter>Header Files\Engines</Filter>
     </ClInclude>
+    <ClInclude Include="include\QuadTree.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\GLFW_EngineCore.cpp">
@@ -178,6 +181,9 @@
     </ClCompile>
     <ClCompile Include="source\PhysicsEngine.cpp">
       <Filter>Source Files\Engines</Filter>
+    </ClCompile>
+    <ClCompile Include="source\QuadTree.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
