--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="include\FileSystemHelper.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\CommandArgumentTypes.h" />
+    <ClInclude Include="include\Graph.h" />
     <ClInclude Include="include\HealthComponent.h" />
     <ClInclude Include="include\InputCommands.h" />
     <ClInclude Include="include\GameObject.h" />
@@ -43,6 +44,7 @@
     <ClInclude Include="include\ModelComponent.h" />
     <ClInclude Include="include\ModelManager.h" />
     <ClInclude Include="include\MovementComponent.h" />
+    <ClInclude Include="include\Node.h" />
     <ClInclude Include="include\PlayerCharacter.h" />
     <ClInclude Include="include\Scene.h" />
     <ClInclude Include="include\StaticEnvironmentObject.h" />
@@ -55,11 +57,13 @@
     <ClCompile Include="source\EnemyTower.cpp" />
     <ClCompile Include="source\GLAD\glad.c" />
     <ClCompile Include="source\GLFW_EngineCore.cpp" />
+    <ClCompile Include="source\Graph.cpp" />
     <ClCompile Include="source\InputHandler.cpp" />
     <ClCompile Include="source\JSON\jsoncpp.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\Mesh.cpp" />
     <ClCompile Include="source\Model.cpp" />
+    <ClCompile Include="source\Node.cpp" />
     <ClCompile Include="source\PlayerCharacter.cpp" />
     <ClCompile Include="source\Scene.cpp" />
     <ClCompile Include="source\StaticEnvironmentObject.cpp" />
