--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj
@@ -24,11 +24,13 @@
     <ClInclude Include="include\CameraViewState.h" />
     <ClInclude Include="include\Collision.h" />
     <ClInclude Include="include\Component.h" />
+    <ClInclude Include="include\CubemapCamera.h" />
     <ClInclude Include="include\DefaultGame.h" />
     <ClInclude Include="include\DynamicEnvironmentObject.h" />
     <ClInclude Include="include\EndLevelCollectable.h" />
     <ClInclude Include="include\EnemyTower.h" />
     <ClInclude Include="include\FileSystemHelper.h" />
+    <ClInclude Include="include\FrameBufferObject.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\CommandArgumentTypes.h" />
     <ClInclude Include="include\FontRenderer.h" />
@@ -45,6 +47,7 @@
     <ClInclude Include="include\ModelManager.h" />
     <ClInclude Include="include\MovementComponent.h" />
     <ClInclude Include="include\PlayerCharacter.h" />
+    <ClInclude Include="include\PostProcessor.h" />
     <ClInclude Include="include\RenderEngine.h" />
     <ClInclude Include="include\Scene.h" />
     <ClInclude Include="include\ShaderProgram.h" />
@@ -53,11 +56,13 @@
     <ClInclude Include="include\TransformComponent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="source\CubemapCamera.cpp" />
     <ClCompile Include="source\DefaultGame.cpp" />
     <ClCompile Include="source\DynamicEnvironmentObject.cpp" />
     <ClCompile Include="source\EndLevelCollectable.cpp" />
     <ClCompile Include="source\EnemyTower.cpp" />
     <ClCompile Include="source\FontRenderer.cpp" />
+    <ClCompile Include="source\FrameBufferObject.cpp" />
     <ClCompile Include="source\GLAD\glad.c" />
     <ClCompile Include="source\GLFW_EngineCore.cpp" />
     <ClCompile Include="source\InputHandler.cpp" />
@@ -66,6 +71,7 @@
     <ClCompile Include="source\Mesh.cpp" />
     <ClCompile Include="source\Model.cpp" />
     <ClCompile Include="source\PlayerCharacter.cpp" />
+    <ClCompile Include="source\PostProcessor.cpp" />
     <ClCompile Include="source\RenderEngine.cpp" />
     <ClCompile Include="source\Scene.cpp" />
     <ClCompile Include="source\ShaderProgram.cpp" />
