--- a/GameEngineArchitecture/GameEngineArchitecture.vcxproj
+++ b/GameEngineArchitecture/GameEngineArchitecture.vcxproj
@@ -34,6 +34,7 @@
     <ClInclude Include="include\EnemyTower.h" />
     <ClInclude Include="include\FileSystemHelper.h" />
     <ClInclude Include="include\FrameBufferObject.h" />
+    <ClInclude Include="include\FrameBufferType.h" />
     <ClInclude Include="include\Game.h" />
     <ClInclude Include="include\CommandArgumentTypes.h" />
     <ClInclude Include="include\Graph.h" />
